--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=SimpleShell
+name=SimpleShell Enhanced
 version=1.0.0
-author=CaféHaine
-maintainer=CaféHaine <kilian.guillaume@gmail.com>
-sentence=A quick and easy way to control your Arduino using serial.
+author=CaféHaine, NuclearPhoenix
+maintainer=NuclearPhoenix <hello@nuclearphoenix.xyz>
+sentence=A quick and easy way to control your Arduino using serial, enhanced version.
 paragraph=Register commands, and start controlling your Arduino!
 category=Communication
-url=https://github.com/cafehaine/SimpleShell
+url=https://github.com/Phoenix1747/SimpleShell
 architectures=*
 depends=LinkedPointerList
