--- a/.github/workflows/arduino-lint.yaml
+++ b/.github/workflows/arduino-lint.yaml
@@ -8,4 +8,4 @@ jobs:
         with:
           project-type: library
           library-manager: update
-          compliance: strict
+          compliance: specification #strict
